--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -332,7 +332,7 @@
                                             <constraint firstAttribute="height" constant="50" id="MeH-Le-m4f"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
