--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -155,90 +155,50 @@
         <!--Сканирование-->
         <scene sceneID="5KL-Ap-fBW">
             <objects>
-                <viewController storyboardIdentifier="ScannerViewController" id="rFK-Bi-iYi" customClass="VisionViewController" customModule="project_eco_find" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScannerViewController" id="rFK-Bi-iYi" customClass="ScannerViewController" customModule="project_eco_find" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ua2-FG-zw7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XPT-c3-Wf5" userLabel="Preview View" customClass="PreviewView" customModule="project_eco_find" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vHD-zB-Ii8" userLabel="Cutout View">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Afz-LZ-p5g">
+                                <rect key="frame" x="130" y="774" width="154" height="30"/>
+                                <state key="normal" title="Сделать фотографию"/>
+                                <connections>
+                                    <action selector="btnTakePicture:" destination="rFK-Bi-iYi" eventType="touchUpInside" id="k4D-Eb-e0t"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y1k-ms-vt8">
+                                <rect key="frame" x="82" y="323" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="Lmr-1f-4Jq"/>
+                                    <constraint firstAttribute="width" constant="250" id="w3h-Oy-orJ"/>
+                                </constraints>
+                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0ZE-NM-FrI">
-                                <rect key="frame" x="107" y="384" width="200" height="128"/>
+                                <rect key="frame" x="107" y="137" width="200" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="IOh-JU-gWK"/>
-                                    <constraint firstAttribute="height" constant="128" id="PkP-bC-Q1d"/>
+                                    <constraint firstAttribute="height" constant="128" id="BkI-M4-ebM"/>
+                                    <constraint firstAttribute="width" constant="200" id="biV-7V-2Z1"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y1k-ms-vt8">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="eIe-MU-lRj"/>
-                                    <constraint firstAttribute="width" constant="200" id="f2c-HQ-qf5"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Afz-LZ-p5g">
-                                <rect key="frame" x="130" y="588" width="154" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="62Q-zU-jeU"/>
-                                </constraints>
-                                <state key="normal" title="Сделать фотографию"/>
-                            </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ad-Qu-hg5" userLabel="Number View">
-                                <rect key="frame" x="116.5" y="430.5" width="181" height="35"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="0001112222">
-                                        <attributes>
-                                            <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                            <font key="NSFont" size="30" name="Menlo-Regular"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="Ey7-JN-S1F" firstAttribute="bottom" secondItem="XPT-c3-Wf5" secondAttribute="bottom" id="9Z6-U3-m60"/>
-                            <constraint firstItem="y1k-ms-vt8" firstAttribute="centerY" secondItem="ua2-FG-zw7" secondAttribute="centerY" id="Hr1-pU-kZ1"/>
-                            <constraint firstItem="XPT-c3-Wf5" firstAttribute="top" secondItem="Ey7-JN-S1F" secondAttribute="top" id="JyV-FR-XqX"/>
-                            <constraint firstItem="vHD-zB-Ii8" firstAttribute="leading" secondItem="Ey7-JN-S1F" secondAttribute="leading" id="NKS-Qr-vXB"/>
-                            <constraint firstItem="XPT-c3-Wf5" firstAttribute="leading" secondItem="Ey7-JN-S1F" secondAttribute="leading" id="RGV-Wk-ZQN"/>
-                            <constraint firstItem="vHD-zB-Ii8" firstAttribute="top" secondItem="Ey7-JN-S1F" secondAttribute="top" id="RVk-qO-oGM"/>
-                            <constraint firstItem="0ZE-NM-FrI" firstAttribute="centerX" secondItem="ua2-FG-zw7" secondAttribute="centerX" id="VIJ-tJ-RTw"/>
-                            <constraint firstItem="2Ad-Qu-hg5" firstAttribute="centerY" secondItem="ua2-FG-zw7" secondAttribute="centerY" id="WVM-RB-VhI"/>
-                            <constraint firstItem="Ey7-JN-S1F" firstAttribute="bottom" secondItem="vHD-zB-Ii8" secondAttribute="bottom" id="XAV-Ot-DQY"/>
-                            <constraint firstItem="Ey7-JN-S1F" firstAttribute="trailing" secondItem="XPT-c3-Wf5" secondAttribute="trailing" id="XnC-9i-rkI"/>
-                            <constraint firstItem="2Ad-Qu-hg5" firstAttribute="centerX" secondItem="ua2-FG-zw7" secondAttribute="centerX" id="YxR-uu-gUO"/>
-                            <constraint firstItem="y1k-ms-vt8" firstAttribute="centerX" secondItem="ua2-FG-zw7" secondAttribute="centerX" id="enP-7x-Ddc"/>
-                            <constraint firstItem="0ZE-NM-FrI" firstAttribute="centerY" secondItem="ua2-FG-zw7" secondAttribute="centerY" id="leY-vd-h3R"/>
-                            <constraint firstItem="Ey7-JN-S1F" firstAttribute="trailing" secondItem="vHD-zB-Ii8" secondAttribute="trailing" id="oUN-RY-aXF"/>
-                            <constraint firstItem="Afz-LZ-p5g" firstAttribute="top" secondItem="y1k-ms-vt8" secondAttribute="bottom" constant="40" id="pgQ-h3-qSw"/>
-                            <constraint firstItem="Afz-LZ-p5g" firstAttribute="centerX" secondItem="y1k-ms-vt8" secondAttribute="centerX" id="yYN-Mg-mmz"/>
+                            <constraint firstItem="Afz-LZ-p5g" firstAttribute="centerX" secondItem="ua2-FG-zw7" secondAttribute="centerX" id="2in-M2-0V9"/>
+                            <constraint firstItem="Ey7-JN-S1F" firstAttribute="bottom" secondItem="Afz-LZ-p5g" secondAttribute="bottom" constant="58" id="Br5-SN-1IT"/>
+                            <constraint firstItem="y1k-ms-vt8" firstAttribute="top" secondItem="0ZE-NM-FrI" secondAttribute="bottom" constant="58" id="Pm1-0m-uX1"/>
+                            <constraint firstItem="0ZE-NM-FrI" firstAttribute="top" secondItem="Ey7-JN-S1F" secondAttribute="top" constant="49" id="YYq-bN-QOx"/>
+                            <constraint firstItem="y1k-ms-vt8" firstAttribute="centerY" secondItem="ua2-FG-zw7" secondAttribute="centerY" id="hoB-BV-neJ"/>
+                            <constraint firstItem="Afz-LZ-p5g" firstAttribute="centerX" secondItem="0ZE-NM-FrI" secondAttribute="centerX" id="jP1-3X-Uma"/>
+                            <constraint firstItem="y1k-ms-vt8" firstAttribute="centerX" secondItem="ua2-FG-zw7" secondAttribute="centerX" id="zqb-4e-bbb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ey7-JN-S1F"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="0ZE-NM-FrI"/>
-                                <exclude reference="y1k-ms-vt8"/>
-                                <exclude reference="Afz-LZ-p5g"/>
-                            </mask>
-                        </variation>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="F6m-2L-GT3" appends="YES" id="dBw-A9-wLR"/>
-                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Сканирование" id="FVR-8N-vFL">
                         <barButtonItem key="backBarButtonItem" title="В меню" id="6zu-dx-W9F"/>
@@ -249,18 +209,12 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="cutoutView" destination="vHD-zB-Ii8" id="UEx-M3-QYE"/>
-                        <outlet property="numberView" destination="2Ad-Qu-hg5" id="Dds-Pf-biT"/>
-                        <outlet property="previewView" destination="XPT-c3-Wf5" id="GZF-Ba-KxO"/>
+                        <outlet property="imageView" destination="y1k-ms-vt8" id="n8W-5G-VIM"/>
+                        <outlet property="textView" destination="0ZE-NM-FrI" id="whO-qx-SWy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xYq-QB-KoL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="p8a-tK-YXS" userLabel="Exit" sceneMemberID="exit"/>
-                <tapGestureRecognizer id="F6m-2L-GT3">
-                    <connections>
-                        <action selector="handleTap:" destination="rFK-Bi-iYi" id="oCf-66-ySo"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1340.5797101449277" y="-739.28571428571422"/>
         </scene>
